21 July 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/views/login/login.component.html:
 * clarin-angular/src/app/components/views/login/login.component.ts:
 * clarin-angular/src/app/components/views/register/register.component.html:
 * clarin-angular/src/app/components/views/register/register.component.ts:
 * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.component.html:
 * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.component.ts:
 * clarin-angular/src/app/services/user-service/user.service.ts:
 * clarin-angular/src/styles.scss: Dashboard with some statistics.

 * clarin-angular/src/app/app-routing.module.ts:
 * clarin-angular/src/app/components/views/add-collection/add-collection.component.scss:
 * clarin-angular/src/app/components/views/manage-collections/manage-collections.component.html:
 * clarin-angular/src/app/ng-matero/theme/sidebar/user-panel.component.ts:
 * clarin-angular/src/app/ng-matero/theme/widgets/user.component.ts:
 * clarin-angular/src/css/clarin-material.scss: Layout fixes.

 * backend/clarin/app/Http/Controllers/UserController.php:
 * clarin-angular/src/app/ng-matero/core/authentication/auth.service.ts:
 * frontend/clarin/css/clarin.css:
 * frontend/clarin/js/controllers/welcomeCtrl.js:
 * frontend/clarin/js/services/userService.js:
 * frontend/clarin/templates/welcome.html: Added firts/last name in
 registration dialog (to be compatible with the user table in MySQL).

 * clarin-angular/angular.json:
 * clarin-angular/src/app/app-routing.module.ts:
 * clarin-angular/src/app/components/views/annotation/annotation.component.ts:
 * clarin-angular/src/app/components/views/login/login.component.ts:
 * clarin-angular/src/app/ng-matero/core/authentication/auth.service.ts:
 * clarin-angular/src/app/ng-matero/core/authentication/interface.ts:
 * clarin-angular/src/app/ng-matero/routes/routes-routing.module.ts:
 * clarin-angular/src/app/ng-matero/routes/routes.module.ts: